--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "react-scripts": "0.9.5",
+    "react-web3": "^0.4.5",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
